# population-density

./: .gitignore  CLIENT_IMPL.md  LICENSE  README.md  cnn_opt.txt  flake.nix  pyproject.toml  requirements.txt  shell.nix
analysis/: .gitignore  README.md  __init__.py  ablation.py  boruta.py  climate_analysis.py  climate_analysis_proc.sh  climate_benchmark.py  climate_benchmarks.py  climate_geospatial_benchmark.py  climate_population_benchmark.py  collinear_oof.py  cross_validation.py  gating_benchmarks.py  graph_metrics.py  hyperparameter.py  hypothesis.py  loaders.py  metrics.py  model_config.yaml  optimizer.py  residual_analysis.py  saipe_benchmarks.py  shared.py  summary_tables.py  tasks.py  vif.py  viirs_benchmarks.py
api_clients/: .gitignore  climate.cpp  climate_init.sql
clients/: Makefile  climate.cpp
crawler/: crawler.hpp  http.cpp  http.hpp  json.hpp
graph/: __init__.py  config.py  topology.py  visualizations.py
ingestion/: __init__.py  admin.py  common.py  config.py  housing.py  ingest.py  laus.py  pep.py  raster.py  s5p.py  usps.py  viirs.py
kernels/: .gitignore  network.py
models/: .gitignore  README.md  __init__.py  aggregate_climpop.py  cross_validation.py  (+17 more)
rust-clients/: Cargo.toml  config.yaml  template.yaml
rust-clients/src/: config.rs  crawler.rs  daemon.rs  http.rs  init.rs  main.rs  pagination.rs  runner.rs
rust-clients/src/clients/: mod.rs  station.rs
rust-clients/src/core/: crawler.rs  endpoint.rs  http.rs  jobs.rs  logging.rs  mod.rs  pagination.rs  runner.rs  storage.rs
rust-clients/src/parent/: daemon.rs  init.rs  mod.rs
(+147 files in other folders)
