[build-system]
requires = ["setuptools>68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topographic"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["models", "utils", "analysis", "preprocessing", "testbench", "optimization", "kernels"]
