[package]
name = "rust_clients"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = [ "json", "gzip", "stream", "rustls-tls" ] }
tokio   = { version = "1", features = [ "full" ] }

async-trait = "0.1"
futures     = "0.3"

serde      = { version = "1", features = [ "derive" ] }
serde_json = "1"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] } 

governor = "0.6"

url = "2"

sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "macros" ] }

chrono = { version = "0.4", features = [ "serde" ] }

# Error handling 
anyhow    = "1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1"
